--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>ExpressApi</title>
 </head>
 <body>
     
-    
+    <main class="container">
+        <section class="row md-3 justify-content-center">
+            <div class="col-md-6">
+                <h6 class="text-center">Chirp down on it</h6>
+                <form action="" method="POST" class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control mb-2 " placeholder="Handle" name="handlebrah">
+                    <label for="chirp">Chirp:</label>
+                    <textarea class="form-control" rows="3" placeholder="Cheep Cheep" name="chirp"></textarea>
+                    <button id="post-chirp" class="btn btn-primary btn-block w-75 mx-auto mt-3">Chirp It</button>
+                </form>
+            </div>
+        </section>
+    </main>
 
 </body>
 </html>
